structured project approach in readme and resplit sample data into train val test of 70/15/15

--- a/notebooks/GANalyzer.ipynb
+++ b/notebooks/GANalyzer.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMQpX8aZRW4HKgBDsJkquPO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ericwang210000/GANalyzer/blob/main/notebooks/GANalyzer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -61,18 +45,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from torchvision import datasets, transforms\n",
-        "from torch.utils.data import DataLoader\n",
-        "\n",
-        "transform = transforms.Compose([\n",
-        "    transforms.Resize((256, 256)),\n",
-        "    transforms.ToTensor(),\n",
-        "])\n",
-        "\n",
-        "dataset = datasets.ImageFolder(root=DATA_PATH, transform=transform)\n",
-        "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -81,12 +54,11 @@
         "id": "KiRRbrmkoJCz",
         "outputId": "8667b5ca-3f31-4315-d076-592fca2f1e2a"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "FileNotFoundError",
           "evalue": "[Errno 2] No such file or directory: '/content/drive/MyDrive/GANalyzer/data/'",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
@@ -98,7 +70,35 @@
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/GANalyzer/data/'"
           ]
         }
+      ],
+      "source": [
+        "from torchvision import datasets, transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((256, 256)),\n",
+        "    transforms.ToTensor(),\n",
+        "])\n",
+        "\n",
+        "dataset = datasets.ImageFolder(root=DATA_PATH, transform=transform)\n",
+        "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMQpX8aZRW4HKgBDsJkquPO",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
